--- a/meis2m/jalali/styles/all/theme/style.css
+++ b/meis2m/jalali/styles/all/theme/style.css
@@ -20,11 +20,11 @@ font-weight: bold;
 
 @font-face {
 font-family: Vazir;
-  src: url('@meis2m_jalali/fonts/Vazir-Light-FD/Vazir-Light-FD.eot'); /* IE9 Compat Modes */
-  src: url('@meis2m_jalali/fonts/Vazir-Light-FD/Vazir-Light-FD.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-url('@meis2m_jalali/fonts/Vazir-Light-FD/Vazir-Light-FD.woff2') format('woff2'), /* Super Modern Browsers */
-url('@meis2m_jalali/fonts/Vazir-Light-FD/Vazir-Light-FD.woff') format('woff'), /* Pretty Modern Browsers */
-url('@meis2m_jalali/fonts/Vazir-Light-FD/Vazir-Light-FD.ttf')  format('truetype'); /* Safari, Android, iOS */
+  src: url('../../../fonts/Vazir-Light-FD/Vazir-Light-FD.eot'); /* IE9 Compat Modes */
+  src: url('../../../fonts/Vazir-Light-FD/Vazir-Light-FD.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+url('../../../fonts/Vazir-Light-FD/Vazir-Light-FD.woff2') format('woff2'), /* Super Modern Browsers */
+url('../../../fonts/Vazir-Light-FD/Vazir-Light-FD.woff') format('woff'), /* Pretty Modern Browsers */
+url('../../../fonts/Vazir-Light-FD/Vazir-Light-FD.ttf')  format('truetype'); /* Safari, Android, iOS */
 font-weight: 300;
 }
 
