--- a/meis2m/jalali/styles/all/theme/adm.css
+++ b/meis2m/jalali/styles/all/theme/adm.css
@@ -1,30 +1,30 @@
 @font-face {
 font-family: Vazir;
-  src: url('../../../fonts/Vazir-FD/Vazir-FD.eot'); /* IE9 Compat Modes */
-  src: url('../../../fonts/Vazir-FD/Vazir-FD.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-url('../../../fonts/Vazir-FD/Vazir-FD.woff2') format('woff2'), /* Super Modern Browsers */
-url('../../../fonts/Vazir-FD/Vazir-FD.woff') format('woff'), /* Pretty Modern Browsers */
-url('../../../fonts/Vazir-FD/Vazir-FD.ttf')  format('truetype'); /* Safari, Android, iOS */
+  src: url('../../../fonts/Vazir/Vazir-Regular.eot'); /* IE9 Compat Modes */
+  src: url('../../../fonts/Vazir/Vazir-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+url('../../../fonts/Vazir/Vazir-Regular.woff2') format('woff2'), /* Super Modern Browsers */
+url('../../../fonts/Vazir/Vazir-Regular.woff') format('woff'), /* Pretty Modern Browsers */
+url('../../../fonts/Vazir/Vazir-Regular.ttf')  format('truetype'); /* Safari, Android, iOS */
 font-weight: normal;
 }
 
 @font-face {
 font-family: Vazir;
-  src: url('../../../fonts/Vazir-Bold-FD/Vazir-Bold-FD.eot'); /* IE9 Compat Modes */
-  src: url('../../../fonts/Vazir-Bold-FD/Vazir-Bold-FD.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-url('../../../fonts/Vazir-Bold-FD/Vazir-Bold-FD.woff2') format('woff2'), /* Super Modern Browsers */
-url('../../../fonts/Vazir-Bold-FD/Vazir-Bold-FD.woff') format('woff'), /* Pretty Modern Browsers */
-url('../../../fonts/Vazir-Bold-FD/Vazir-Bold-FD.ttf')  format('truetype'); /* Safari, Android, iOS */
+  src: url('../../../fonts/Vazir-Bold/Vazir-Bold.eot');
+  src: url('../../../fonts/Vazir-Bold/Vazir-Bold.eot?#iefix') format('embedded-opentype'),
+url('../../../fonts/Vazir-Bold/Vazir-Bold.woff2') format('woff2'),
+url('../../../fonts/Vazir-Bold/Vazir-Bold.woff') format('woff'),
+url('../../../fonts/Vazir-Bold/Vazir-Bold.ttf')  format('truetype');
 font-weight: bold;
 }
 
 @font-face {
 font-family: Vazir;
-  src: url('../../../fonts/Vazir-Light-FD/Vazir-Light-FD.eot'); /* IE9 Compat Modes */
-  src: url('../../../fonts/Vazir-Light-FD/Vazir-Light-FD.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-url('../../../fonts/Vazir-Light-FD/Vazir-Light-FD.woff2') format('woff2'), /* Super Modern Browsers */
-url('../../../fonts/Vazir-Light-FD/Vazir-Light-FD.woff') format('woff'), /* Pretty Modern Browsers */
-url('../../../fonts/Vazir-Light-FD/Vazir-Light-FD.ttf')  format('truetype'); /* Safari, Android, iOS */
+  src: url('../../../fonts/Vazir-Light/Vazir-Light.eot');
+  src: url('../../../fonts/Vazir-Light/Vazir-Light.eot?#iefix') format('embedded-opentype'),
+url('../../../fonts/Vazir-Light/Vazir-Light.woff2') format('woff2'),
+url('../../../fonts/Vazir-Light/Vazir-Light.woff') format('woff'),
+url('../../../fonts/Vazir-Light/Vazir-Light.ttf')  format('truetype');
 font-weight: 300;
 }
 
